--- a/templates/noobnews/index.html
+++ b/templates/noobnews/index.html
@@ -1,6 +1,15 @@
 {% extends 'noobnews/base.html' %}
 {% load staticfiles %}
-
+{% block title_block %}
+Index
+{% endblock %}
 {% block body_block %}
-    TODO list
+
+<div class="content">
+  <div class="block x1"><img src="Images/majoraMask.jpg"></div>
+  <div class="block x2">2</div>
+  <div class="block x3">3</div>
+  <div class="block x4">4</div>
+  <div class="block x5">5</div>
+</div>
 {% endblock %}
