- Twitter API authentication - Modification of models.py: using django authentication API - Login page - Register page (just skeleton)

--- a/templates/noobnews/base.html
+++ b/templates/noobnews/base.html
@@ -78,6 +78,9 @@
         <input id="search_submit" value="" type="submit" />
       </form>
     </div>
-    {% block body_block %}{% endblock %}
+    <div class="container">
+      {% block body_block %}
+      {% endblock %}
+    </div>
   </body>
 </html>
