Slug Working, Search Working, added views for Video Games

--- a/templates/noobnews/home.html
+++ b/templates/noobnews/home.html
@@ -1,9 +1,10 @@
 {% extends 'noobnews/base.html' %}
 {% load staticfiles %}
 {% block title_block %}
-Index
+Home
 {% endblock %}
 {% block body_block %}
+
 
 <div class="content">
   <div class="block x1"><img src="Images/majoraMask.jpg"></div>
@@ -12,4 +13,6 @@ Index
   <div class="block x4">4</div>
   <div class="block x5">5</div>
 </div>
+
+
 {% endblock %}
