--- a/templates/noobnews/base.html
+++ b/templates/noobnews/base.html
@@ -7,33 +7,14 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
     <script
-      src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
-      integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"
-      crossorigin="anonymous"
-    ></script>
-    <script
-      src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.6/umd/popper.min.js"
-      integrity="sha384-wHAiFfRlMFy6i5SRaxvfOCifBUQy1xHdJ/yoi7FRNXMRBu5WHdZYu1hA6ZOblgut"
-      crossorigin="anonymous"
-    ></script>
-    <link
-      rel="stylesheet"
-      href="https://stackpath.bootstrapcdn.com/bootstrap/4.2.1/css/bootstrap.min.css"
-      integrity="sha384-GJzZqFGwb1QTTN6wy59ffF1BuGJpLSa9DkKMp0DgiMDm4iYMj70gZWKYbI706tWS"
-      crossorigin="anonymous"
-    />
-    <script
-      src="https://stackpath.bootstrapcdn.com/bootstrap/4.2.1/js/bootstrap.min.js"
-      integrity="sha384-B0UglyR+jN6CkvvICOB2joaf5I4l3gm9GU6Hc1og6Ls7i6U/mkkaduKaBhlAXv9k"
-      crossorigin="anonymous"
-    ></script>
-    <link
-      rel="stylesheet"
-      href="https://use.fontawesome.com/releases/v5.6.3/css/all.css"
-      integrity="sha384-UHRtZLI+pbxtHCWp1t77Bi1L4ZtiqrqD80Kn4Z8NTSRyMA2Fd33n5dQ8lWUE00s/"
-      crossorigin="anonymous"
-    />
+      src="https://code.jquery.com/jquery-3.3.1.slim.min.js"integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.6/umd/popper.min.js"integrity="sha384-wHAiFfRlMFy6i5SRaxvfOCifBUQy1xHdJ/yoi7FRNXMRBu5WHdZYu1hA6ZOblgut"crossorigin="anonymous"></script>
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.2.1/css/bootstrap.min.css" integrity="sha384-GJzZqFGwb1QTTN6wy59ffF1BuGJpLSa9DkKMp0DgiMDm4iYMj70gZWKYbI706tWS" crossorigin="anonymous"/>
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.2.1/js/bootstrap.min.js"integrity="sha384-B0UglyR+jN6CkvvICOB2joaf5I4l3gm9GU6Hc1og6Ls7i6U/mkkaduKaBhlAXv9k"crossorigin="anonymous"></script>
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.6.3/css/all.css" integrity="sha384-UHRtZLI+pbxtHCWp1t77Bi1L4ZtiqrqD80Kn4Z8NTSRyMA2Fd33n5dQ8lWUE00s/" crossorigin="anonymous"/>
     <link rel="stylesheet" href="../../static/css/noobnews.css" />
+    <script src="{% static "js/noobnews-jquery.js" %}"></script>
+    <script src="{% static "js/noobnews-ajax.js" %}"></script>
     <script>
       function openNav() {
         document.getElementById("mySidenav").style.width = "250px";
@@ -42,7 +23,7 @@
       function closeNav() {
         document.getElementById("mySidenav").style.width = "0";
       }
-    </script>
+   </script>
     <title>Noob News</title>
   </head>
   <body background="Images/Background2.png">
@@ -52,9 +33,9 @@
       <a href="javascript:void(0)" class="closebtn" onclick="closeNav()"
         >&times;</a
       >
-      <a href="#">PlaceHolder</a>
-      <a href="#">PlaceHolder</a>
-      <a href="#">PlaceHolder</a>
+      <a href="#">Home</a>
+      <a href="#">Top 40</a>
+      <a href="#">Profile</a>
       <a href="#">PlaceHolder</a>
     </div>
     <br />
@@ -67,17 +48,28 @@
     <!-- https://codepen.io/CBeghin/pen/HeuiF-->
     <a herf="www.google.com" class="user"> <i class="far fa-user"></i></a>
     <a herf="www.google.com" class="search"> <i class="fas fa-search"></i></a>
-    <div id="search">
-      <form action="" autocomplete="on">
-        <input
-          id="search"
-          name="search"
-          type="text"
-          placeholder="What're we playing"
-        />
-        <input id="search_submit" value="" type="submit" />
+
+    <form>
+          <li class="nav nav-item"><input class="search-query form-control suggestion" type="text"
+                                      name="suggestion" value="" id="suggestion" placeholder="Find a category"/>
+          </li>
       </form>
-    </div>
+  </ul>
+  <div id="cats">
+  </div>
     {% block body_block %}{% endblock %}
+    <!-- Bootstrap core JavaScript ================================================== -->
+<!-- Placed at the end of the document so the pages load faster -->
+
+<script src="https://npmcdn.com/tether@1.2.4/dist/js/tether.min.js"></script>
+<script src="{% static "js/noobnews-jquery.js" %}"></script>
+<script src="{% static "js/noobnews-ajax.js" %}"></script>
+
+<script src="https://npmcdn.com/bootstrap@4.0.0-alpha.5/dist/js/bootstrap.min.js"></script>
+
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.4/jquery.min.js"> </script>
+<script src="http://v4-alpha.getbootstrap.com/dist/js/bootstrap.min.js"> </script>
+<!-- IE10 viewport hack for Surface/desktop Windows 8 bug -->
+<script src= "http://v4-alpha.getbootstrap.com/assets/js/ie10-viewport-bug-workaround.js"> </script>
   </body>
 </html>
