--- a/templates/noobnews/base.html
+++ b/templates/noobnews/base.html
@@ -56,11 +56,11 @@
       </form>
 
   </ul>
-  <div id="cats">
+  <div id="cats" class="container">
+    {% include 'noobnews/messages.html' %}
+    {% block body_block %}
+    {% endblock %}
   </div>
-    {% block body_block %}{% endblock %}
-
-    </div>
   </body>
   <!-- Bootstrap core JavaScript ================================================== -->
 <!-- Placed at the end of the document so the pages load faster -->
