--- a/templates/noobnews/base.html
+++ b/templates/noobnews/base.html
@@ -3,9 +3,13 @@
 
 <html lang="en">
   <head>
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css">
+    <link rel='stylesheet prefetch' href='https://maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css'>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css">
+    <link rel='stylesheet prefetch' href='https://maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css'>
     <script
       src="https://code.jquery.com/jquery-3.3.1.slim.min.js"integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.6/umd/popper.min.js"integrity="sha384-wHAiFfRlMFy6i5SRaxvfOCifBUQy1xHdJ/yoi7FRNXMRBu5WHdZYu1hA6ZOblgut"crossorigin="anonymous"></script>
@@ -39,10 +43,7 @@
     </div>
     <br />
     <span
-      style="font-size:30px;cursor:pointer; font-size: 90%; font-family:'Batang'; padding-left:40px; color:white"
-      onclick="openNav()"
-    >
-      &#9776;</span
+      style="font-size:30px;cursor:pointer; font-size: 90%; font-family:'Batang'; padding-left:40px; color:white" onclick="openNav()">&#9776;</span
     >
     <!-- https://codepen.io/CBeghin/pen/HeuiF-->
     <a herf="www.google.com" class="user"> <i class="far fa-user"></i></a>
