--- a/templates/noobnews/home.html
+++ b/templates/noobnews/home.html
@@ -6,7 +6,7 @@ Home
 {% block body_block %}
 
 
-<div class="content">
+<div class="homecontent">
   <div class="block x1"><img src="Images/majoraMask.jpg"></div>
   <div class="block x2">2</div>
   <div class="block x3">3</div>
