--- a/templates/noobnews/videogame.html
+++ b/templates/noobnews/videogame.html
@@ -45,7 +45,7 @@
         <a>
           <div class="content">
             <!--To embred a video you need to https://www.youtube.com/embed/videoseries?list= then the playlist code, the playlist code could be stored in the database -->
-            <h1>Youtube Playlist:</h1>
+            <h1>Youtube Playlist</h1>
             <center>
             <span><iframe width="560" height="315" src="https://www.youtube.com/embed/videoseries?list={{ videoGame.youtubeurl }}" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe></span>
           </center>
