--- a/templates/noobnews/videogame.html
+++ b/templates/noobnews/videogame.html
@@ -57,7 +57,7 @@
           <div class="content">
             <h1>Speed Run</h1>
             <center>
-            <span><iframe width="560" height="315" src="https://www.youtube.com/embed/{{ videoGame.speedRun }}" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe></span>
+            <span><iframe width="560" height="315" src="https://player.twitch.tv/?autoplay=false&video={{ videoGame.speedRun }}" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe></span>
           </center>
           </div>
 
