--- a/templates/noobnews/videogame.html
+++ b/templates/noobnews/videogame.html
@@ -1,4 +1,3 @@
-<link rel="stylesheet" href="css/style.css">
 <!DOCTYPE html>
 <html lang="en">
 
@@ -7,8 +6,12 @@
   <title>Contact Me Animation</title>
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel='stylesheet' href='https://fonts.googleapis.com/css?family=Roboto+Condensed'>
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/5.0.0/normalize.min.css">
+<link rel='stylesheet' href='https://cdnjs.cloudflare.com/ajax/libs/Swiper/4.3.5/css/swiper.min.css'>
+
   <link rel="stylesheet" href="/static/css/noobnews.css">
 </head>
+
 <body>
   <div class="fond"><span class="s2"></span></div>
   <div class="contact">
@@ -37,35 +40,66 @@
         </button>
       </div>
       <div class="title">
-        <p>could do different style of cards </p>
+
     </main>
 
-      <nav>
+    <nav>
+        <div class="blog-slider">
+          <div class="blog-slider__wrp swiper-wrapper">
+            <div class="blog-slider__item swiper-slide">
+              <div class="blog-slider__img">
+                <span><iframe width="560" height="315" src="https://www.youtube.com/embed/videoseries?list={{ videoGame.youtubeurl }}" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe></span>
+              </div>
+              <div class="blog-slider__content">
+                <div class="blog-slider__title">Youtube:   Let's Play</div>
+                <div class="blog-slider__text">Be cool if we got infomration about the video here</div>
 
-        <a>
-          <div class="content">
-            <!--To embred a video you need to https://www.youtube.com/embed/videoseries?list= then the playlist code, the playlist code could be stored in the database -->
-            <h1>Youtube Playlist</h1>
-            <center>
-            <span><iframe width="560" height="315" src="https://www.youtube.com/embed/videoseries?list={{ videoGame.youtubeurl }}" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe></span>
-          </center>
+              </div>
+            </div>
+            <div class="blog-slider__item swiper-slide">
+              <div class="blog-slider__img">
+                <span><iframe width="560" height="315" src="https://www.youtube.com/embed/{{ videoGame.speedRun }}" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe></span>
+              </div>
+              <div class="blog-slider__content">
+                <div class="blog-slider__title">Twitch Speed Run</div>
+                <div class="blog-slider__text">Speed run record held by BLA BLA BLA</div>
+             </div>
+            </div>
+            <div class="blog-slider__item swiper-slide">
+              <div class="blog-slider__img">
+                <span><iframe width="560" height="315" src="https://www.youtube.com/embed/{{ videoGame.speedRun }}" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe></span>
+              </div>
+              <div class="blog-slider__content">
+                <div class="blog-slider__title">Twitch: LIVE</div>
+                <div class="blog-slider__text">Speed run record held by BLA BLA BLA</div>
+             </div>
+            </div>
+
           </div>
+          <div class="blog-slider__pagination"></div>
+        </div>
+        <script src='https://cdnjs.cloudflare.com/ajax/libs/jquery/3.3.1/jquery.min.js'></script>
+      <script src='https://cdnjs.cloudflare.com/ajax/libs/Swiper/4.3.5/js/swiper.min.js'></script>
 
+      <a>
+        <div class="content">
+          <!--To embred a video you need to https://www.youtube.com/embed/videoseries?list= then the playlist code, the playlist code could be stored in the database -->
+          <center>
+            
+            {% if genres %}
+            {% for g in genres %}
+            {{ g.user_id }}:
+            {{ g.comments }}
+            {% endfor %}
+            {% endif %}
 
-        </a>
-        <a>
-          <div class="content">
-            <h1>Speed Run</h1>
-            <center>
-            <span><iframe width="560" height="315" src="https://www.youtube.com/embed/{{ videoGame.speedRun }}" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe></span>
-          </center>
-          </div>
+        </div>
 
-        </a>
+      </a>
 
-      </nav>
-    </div>
-    <script src='https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js'></script>
+    </nav>
+  </div>
+  <script src='https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js'></script>
   <script src="/static/js/index.js"></script>
 </body>
 
