Match password validation

--- a/templates/noobnews/login.html
+++ b/templates/noobnews/login.html
@@ -1,50 +1,64 @@
 {% extends 'noobnews/base.html' %}
-{% load staticfiles %}
-{% block title_block %}
-Login
-{% endblock %}
-
+{% load staticfiles %} 
+{% block title_block%}
+Login 
+{% endblock %} 
 {% block body_block %}
 <div class="row justify-content-center">
-    <div class="col-6">
-        <div class="card">
-            <article class="card-body">
-                <a href="{% url 'register' %}" class="float-right btn btn-outline-primary">Sign up</a>
-                <h4 class="card-title mb-4 mt-1">Sign in</h4>
-                <p>
-                    <a href="{% url 'social:begin' 'twitter' %}" class="btn btn-block btn-outline-info">
-                        <i class="fab fa-twitter"></i> Login via Twitter
-                    </a>
-                </p>
-                <hr />
-                <form id="login_form" method="post" action="{% url 'login' %}">
-                  {% csrf_token %}
-                  <div class="form-group">
-                    <input name="mail" class="form-control" required placeholder="Email" type="email" />
-                  </div>
-                  <!-- form-group// -->
-                  <div class="form-group">
-                    <input name="password" class="form-control" required placeholder="Password" type="password" />
-                  </div>
-                  <!-- form-group// -->
-                  <div class="row align-items-center">
-                    <div class="col-md-6">
-                      <div class="form-group">
-                        <button type="submit" class="btn btn-primary btn-block">
-                          Login
-                        </button>
-                      </div>
-                      <!-- form-group// -->
-                    </div>
-                    <div class="col-md-6 text-right">
-                      <a class="small" href="#">Forgot password?</a>
-                    </div>
-                  </div>
-                  <!-- .row// -->
-                </form>
-              </article>
+  <div class="card w-50">
+    <article class="card-body">
+      <a href="{% url 'register' %}" class="float-right btn btn-outline-primary"
+        >Sign up</a
+      >
+      <h4 class="card-title mb-4 mt-1">Sign in</h4>
+      <p>
+        <a
+          href="{% url 'social:begin' 'twitter' %}"
+          class="btn btn-block btn-outline-info"
+        >
+          Login via Twitter
+        </a>
+      </p>
+      <hr />
+      <form id="login_form" method="post" action="{% url 'login' %}">
+        {% csrf_token %}
+        <div class="form-group">
+          <input
+            name="mail"
+            class="form-control"
+            required
+            placeholder="Email"
+            type="email"
+          />
+        </div>
+        <!-- form-group// -->
+        <div class="form-group">
+          <input
+            name="password"
+            class="form-control"
+            required
+            placeholder="Password"
+            type="password"
+          />
+        </div>
+        <!-- form-group// -->
+        <div class="row align-items-center">
+          <div class="col-md-6">
+            <div class="form-group">
+              <button type="submit" class="btn btn-primary btn-block">
+                Login
+              </button>
             </div>
-            <!-- card.// -->
-    </div>
+            <!-- form-group// -->
+          </div>
+          <div class="col-md-6 text-right">
+            <a class="small" href="#">Forgot password?</a>
+          </div>
+        </div>
+        <!-- .row// -->
+      </form>
+    </article>
+  </div>
+  <!-- card.// -->
 </div>
 {% endblock %}
