--- a/static/css/noobnews.css
+++ b/static/css/noobnews.css
@@ -4,13 +4,91 @@ body {
   font-family: "Open Sans", sans-serif;
 }
 
+/*Comments Section*/
+
+@import url("https://fonts.googleapis.com/css?family=Source+Sans+Pro");
+
+.scroll {
+    max-height: 400px;
+    overflow-y: auto;
+}
+
+.content-wrap {
+  max-width: 800px;
+  width: 95%;
+  margin: 5em auto;
+  box-shadow: 0px 0px 15px 5px rgba(black, 0.1);
+}
+.comment-item {
+  position: relative;
+  background: white;
+
+  &--inner {
+    padding: 2em 2em;
+    position: relative;
+    &:after {
+      content: "";
+      position: relative;
+      display: block;
+      clear: both;
+    }
+  }
+}
+.avatar {
+  max-width: 80px;
+  margin: 0;
+  float: left;
+  img {
+    width: 100%;
+  }
+}
+
+.is-right--inner {
+  margin-left: 5.6em;
+
+  small {
+    padding-left: 0.7em;
+    color: #999;
+    font-size: 0.7em;
+  }
+}
+.name {
+  color: #367588;
+  text-decoration: none;
+  font-size: 0.9em;
+  font-weight: 700;
+}
+
+.bar {
+  color: #999;
+  font-size: 1em;
+  position: relative;
+  top: -4px;
+  padding: 0em 0.5em;
+}
+.ratings {
+  svg {
+    cursor: pointer;
+    stroke: #999;
+    width: 17px;
+    height: 17px;
+  }
+}
+
+.share {
+  padding-left: 0.5em;
+  position: relative;
+  top: -4px;
+  color: #999;
+  transition: all 400ms ease;
+  cursor: pointer;
+}
+
 /*Video Cards*/
 @import url("https://fonts.googleapis.com/css?family=Fira+Sans:400,500,600,700,800");
 * {
   box-sizing: border-box;
 }
-
-
 .blog-slider {
   width: 95%;
   position: relative;
@@ -819,15 +897,6 @@ li {
   grid-row-start: 1;
   grid-row-end: 3;
   background-color: #ff8c00;
-}
-
-img {
-  position: absolute;
-  top: -9999px;
-  left: -9999px;
-  right: -9999px;
-  bottom: -9999px;
-  margin: auto;
 }
 
 /*Sidebar */
