Fixed css in login and register pages

--- a/templates/noobnews/base.html
+++ b/templates/noobnews/base.html
@@ -18,6 +18,7 @@
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.6.3/css/all.css" integrity="sha384-UHRtZLI+pbxtHCWp1t77Bi1L4ZtiqrqD80Kn4Z8NTSRyMA2Fd33n5dQ8lWUE00s/" crossorigin="anonymous"/>
     <link rel="stylesheet" href="/static/css/noobnews.css" />
     <link rel="stylesheet" href="/static/css/top40.css" />
+    <link rel="stylesheet" href="/static/css/login.css" />
     <script src="{% static "js/noobnews-jquery.js" %}"></script>
     <script src="{% static "js/noobnews-ajax.js" %}"></script>
     <script src="{% static "js/top40.js" %}"></script>
@@ -59,7 +60,7 @@
      <div class="results" id="cats">
     </div>
    </form>
-
+   <hr>
    <div class="container">
       {% include 'noobnews/messages.html' %}
       {% block body_block %}
