--- a/templates/noobnews/login.html
+++ b/templates/noobnews/login.html
@@ -5,7 +5,7 @@ Login
 {% endblock %} 
 {% block body_block %}
 <div class="row justify-content-center">
-  <div class="card w-50">
+  <div class="card-login w-50">
     <article class="card-body">
       <a href="{% url 'register' %}" class="float-right btn btn-outline-primary"
         >Sign up</a
@@ -16,6 +16,7 @@ Login
           href="{% url 'social:begin' 'twitter' %}"
           class="btn btn-block btn-outline-info"
         >
+          <i class="fab-login fa-twitter"></i>
           Login via Twitter
         </a>
       </p>
