--- a/templates/noobnews/register.html
+++ b/templates/noobnews/register.html
@@ -11,16 +11,15 @@
       width: 40px;
     }
   </style>
-  <form
-    id="user_form"
-    class="form-horizontal"
-    method="POST"
-    action="{% url 'register' %}"
-    enctype="multipart/form-data"
-  >
-    {% csrf_token %}
-    <div class="card w-100 bg-light">
+    <div class="card-login w-50 bg-light">
       <article class="card-body">
+          <form
+          id="user_form"
+          method="POST"
+          action="{% url 'register' %}"
+          enctype="multipart/form-data"
+        >
+          {% csrf_token %}
         {% crispy user_form %}
         {% crispy profile_form %}
         <div class="row align-items-center">
@@ -37,8 +36,8 @@
             <a class="small" href="{% url 'login' %}">Log In</a>
           </div>
         </div>
+      </form>
       </article>
     </div>
-  </form>
 </div>
 {% endblock %}
