--- a/templates/noobnews/login.html
+++ b/templates/noobnews/login.html
@@ -4,6 +4,7 @@
 Login 
 {% endblock %} 
 {% block body_block %}
+<script src="../../static/js/login.js"></script>
 <div class="row justify-content-center">
   <div class="card-login w-50">
     <article class="card-body">
@@ -53,7 +54,7 @@ Login
             <!-- form-group// -->
           </div>
           <div class="col-md-6 text-right">
-            <a class="small" href="#">Forgot password?</a>
+            <a class="small" href="/">Return to the Home page</a>
           </div>
         </div>
         <!-- .row// -->
