--- a/templates/noobnews/register.html
+++ b/templates/noobnews/register.html
@@ -6,6 +6,7 @@
 {% endblock %}
 {% block body_block %}
 <div class="row justify-content-center">
+  <script src="../../static/js/login.js"></script>
   <style type="text/css">
     .input-group-text {
       width: 40px;
