--- a/templates/noobnews/profile.html
+++ b/templates/noobnews/profile.html
@@ -7,6 +7,17 @@ Profile
 
 
 <h4>Profile </h4>
-
+<div>
+    <div>
+    
+    <img src="{{user.userprofile.image.url}}">
+    <div>
+    <h2>{{user.username}}</h2>
+    <p>{{user.email}}</p> 
+    </div>
+    </div>
+    </div>
+    
+    
 
 {% endblock %}
