--- a/templates/noobnews/base.html
+++ b/templates/noobnews/base.html
@@ -55,6 +55,7 @@
         {% if user.is_authenticated %}
           <a herf="www.google.com" class="user"> <i class="fas fa-user"></i></a>
           <a herf="www.google.com" class="searchicon"> <i class="fas fa-search"></i></a>
+          <li><a href="{% url 'logout' %}">Logout</a></li>
         {% else %}
           <a href="{% url 'login' %}" role="button" class="login-button btn btn-outline-light btn-sm">Login</a>
         {% endif %}
