--- a/static/css/noobnews.css
+++ b/static/css/noobnews.css
@@ -4,6 +4,52 @@ body {
   font-family: "Open Sans", sans-serif;
 }
 
+
+/*Comment Model*/
+
+.modal {
+
+      display: none; /* Hidden by default */
+      position: fixed; /* Stay in place */
+      z-index: 1; /* Sit on top */
+      left: 0;
+      top: 0;
+      width: 100%; /* Full width */
+      height: 100%; /* Full height */
+      overflow: auto; /* Enable scroll if needed */
+      background-color: rgb(0,0,0); /* Fallback color */
+      background-color: rgba(0,0,0,0.4); /* Black w/ opacity */
+      padding-top: 60px;
+}
+
+      /* Modal Content/Box */
+        .modal-content {
+            padding-left: .5%;
+            padding-bottom: .5%;
+            padding-right: .5%;
+            background-color: #fefefe;
+            margin: 5% auto 50% auto; /* 5% from the top, 15% from the bottom and centered */
+            border: -5px solid #888;
+            width: 30%; /* Could be more or less, depending on screen size */
+        }
+
+/* The Close Button */
+.close {
+    color: #aaa;
+    float: right;
+    font-size: 28px;
+    font-weight: bold;
+    margin-right:3%
+}
+
+.close:hover,
+.close:focus {
+    color: black;
+    text-decoration: none;
+    cursor: pointer;
+}
+}
+
 /*Comments Section*/
 
 @import url("https://fonts.googleapis.com/css?family=Source+Sans+Pro");
