--- a/templates/noobnews/base.html
+++ b/templates/noobnews/base.html
@@ -53,8 +53,8 @@
       <div class="row">
         <!-- https://codepen.io/CBeghin/pen/HeuiF-->
         {% if user.is_authenticated %}
-          <a herf="www.google.com" class="user"> <i class="fas fa-user"></i></a>
-          <a herf="www.google.com" class="searchicon"> <i class="fas fa-search"></i></a>
+          <a href="{% url 'profile' %}" class="user"> <i class="fas fa-user"></i></a>
+          
           <li><a href="{% url 'logout' %}">Logout</a></li>
         {% else %}
           <a href="{% url 'login' %}" role="button" class="login-button btn btn-outline-light btn-sm">Login</a>
