--- a/templates/noobnews/profile.html
+++ b/templates/noobnews/profile.html
@@ -1,19 +1,50 @@
 {% extends 'noobnews/base.html' %}
 {% load staticfiles %}
-{% block title_block%} 
-Profile 
+
+{% block head%} 
+<link href="//maxcdn.bootstrapcdn.com/bootstrap/3.3.0/css/bootstrap.min.css" rel="stylesheet" id="bootstrap-css">
+<script src="//maxcdn.bootstrapcdn.com/bootstrap/3.3.0/js/bootstrap.min.js"></script>
+<script src="//code.jquery.com/jquery-1.11.1.min.js"></script>
+
 {% endblock %}
+
+
 {% block body_block %}
 
-<h4>Profile</h4>
-<div>
-  <div>
-    <img src="{{ user.userprofile.user_profile_image.url }}" />
-    <div>
-      <h2>{{ user.userprofile.player_tag }}</h2>
-      <p>{{ user.email }}</p>
-    </div>
+
+  <div class="col-md-6 img" >
+      <h3 style="color:white;">Profile</h3><br><br>
   </div>
+
+<!------ User picture and description ---------->
+
+<link href="http://fontawesome.io/assets/font-awesome/css/font-awesome.css" rel="stylesheet" media="screen">  
+<div class="container">
+    <div class="row user-menu-container square">
+        <div class="col-md-7 user-details">
+           
+            <div class="row coralbg white">
+                <div class="col-md-6 no-pad">
+                    <div class="user-pad">
+                        <h4 style="color:white;"><i ></i> {{ user.userprofile.player_tag }}</h4>
+                        <p  style="color:white;"> <i ></i> {{ user.email }} </p>
+                        <button type="button" class="btn btn-labeled btn-info" href="#">
+                            <span class="btn-label"><i ></i></span>Update my profile picture</button>
+                    </div>
+                </div>
+                <div class="col-md-6 no-pad">
+                    <div class="user-image">
+                        
+                        <img src="{{ user.userprofile.user_profile_image.url }}" class="img-responsive thumbnail" >
+                    </div>
+                </div>
+            </div>
+           
+        </div>
+       
+        
+    </div>
 </div>
+
 
 {% endblock %}
