Updated overall design and videogame page extends base.html

--- a/templates/noobnews/top40.html
+++ b/templates/noobnews/top40.html
@@ -18,7 +18,7 @@
       <div id="{{ v.genre.name }}" class="content2">
         <div><button class="plus"><h1 style="font-size: 2rem; color: #000;">{{ v.rating }}/5</h1></<button></div>
         <div class="right2">
-          <h1 style="padding-bottom: 30px;">{{ v.name }}</h1>
+          <h1 style="color:black; margin-right: 70px; padding-bottom: 40px; font-size: 15px;">{{ v.name }}</h1>
         </div>
     <div class="thumbnail2" style="border-radius: 50px / 15px; background-color: transparent;"><img class="left" src="{{ v.image }}"  style="width:100%; height: 100%; " /></div>
     </div>
