--- a/static/css/top40.css
+++ b/static/css/top40.css
@@ -63,7 +63,7 @@
   border: none;
   outline: none;
   padding: 12px 16px;
-  background-color: white;
+  background-color: rgba(255, 255, 255, 0);
   cursor: pointer;
   align-items: center;
   font-size: 18px;
@@ -73,14 +73,14 @@
 
 /* Add a grey background color on mouse-over */
 #btn2:hover {
-  background-color: #fff;
+  background-color: rgba(255, 255, 255, 0.98);
   transform: scale(1.5);
   opacity: 1;
   transition: 0.5s;
 }
 
 .btn2.active2 {
-  background-color: #fff;
+  background-color: rgba(255, 255, 255, 0);
 }
 
 .card2 {
@@ -116,11 +116,12 @@
     float: right;
     width: 70px;
     height: 70px;
-    background-color: #fff transparent;
+    background-color: rgba(255, 255, 255, 0);
     color: #000;
-    border-radius: 50%;
     border: none;
-    -webkit-box-shadow: 10px 10px 60px 0px rgba(0, 0, 0, 0.7);
-    -moz-box-shadow: 10px 10px 60px 0px rgba(0, 0, 0, 0.7);
-    box-shadow: 10px 10px 60px 0px rgba(0, 0, 0, 0.7);
-  }
+    border-radius: 50%;
+    box-shadow:
+        0 0 50px #fff,            /* outer white */
+        15px 0 76px #f0f,        /* outer left magenta */
+        13px 0 47px #0ff;         /* outer right cyan */
+}
