--- a/templates/noobnews/base.html
+++ b/templates/noobnews/base.html
@@ -3,25 +3,35 @@
 
 <html lang="en">
   <head>
+        {% block videoG %}
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css">
     <link rel='stylesheet prefetch' href='https://maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css'>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css">
-    <link rel='stylesheet prefetch' href='https://maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css'>
+
+
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
+
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.0/css/bootstrap.min.css">
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.0/js/bootstrap.min.js"></script>
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.2.1/css/bootstrap.min.css" integrity="sha384-GJzZqFGwb1QTTN6wy59ffF1BuGJpLSa9DkKMp0DgiMDm4iYMj70gZWKYbI706tWS" crossorigin="anonymous"/>
+
     <script
       src="https://code.jquery.com/jquery-3.3.1.slim.min.js"integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.6/umd/popper.min.js"integrity="sha384-wHAiFfRlMFy6i5SRaxvfOCifBUQy1xHdJ/yoi7FRNXMRBu5WHdZYu1hA6ZOblgut"crossorigin="anonymous"></script>
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.2.1/css/bootstrap.min.css" integrity="sha384-GJzZqFGwb1QTTN6wy59ffF1BuGJpLSa9DkKMp0DgiMDm4iYMj70gZWKYbI706tWS" crossorigin="anonymous"/>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.2.1/js/bootstrap.min.js"integrity="sha384-B0UglyR+jN6CkvvICOB2joaf5I4l3gm9GU6Hc1og6Ls7i6U/mkkaduKaBhlAXv9k"crossorigin="anonymous"></script>
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.6.3/css/all.css" integrity="sha384-UHRtZLI+pbxtHCWp1t77Bi1L4ZtiqrqD80Kn4Z8NTSRyMA2Fd33n5dQ8lWUE00s/" crossorigin="anonymous"/>
-    <link rel="stylesheet" href="/static/css/noobnews.css" />
     <link rel="stylesheet" href="/static/css/top40.css" />
-    <link rel="stylesheet" href="/static/css/login.css" />
+
+        <script src="{% static "js/top40.js" %}"></script>
+  {% endblock %}
+      <link rel="stylesheet" href="/static/css/login.css" />
+    <link rel="stylesheet" href="/static/css/noobnews.css" />
+
     <script src="{% static "js/noobnews-jquery.js" %}"></script>
     <script src="{% static "js/noobnews-ajax.js" %}"></script>
-    <script src="{% static "js/top40.js" %}"></script>
+
 
     <script>
       function openNav() {
@@ -32,29 +42,30 @@
         document.getElementById("mySidenav").style.width = "0";
       }
    </script>
-    <title>Noob News</title>
+    <title>
+      {% block title_block %}Noob News{% endblock %}</title>
   </head>
-  <body background="/static/images/Background2.png" styler="background-size: cover;">
+  <body background="/static/images/Background.png" style="background-size: cover;   background-repeat: no-repeat;">
     <!-- https://www.etq-amsterdam.com/ -->
 
     <div id="mySidenav" class="sidenav">
       <a href="javascript:void(0)" class="closebtn" onclick="closeNav()"
         >&times;</a
       >
-      <a href="#">Home</a><a href="#">Top 40</a>
-<a href="#">Profile</a>
-<a href="#">PlaceHolder</a>
+      <a href="{% url 'home' %}">Home</a>
+      <a href="{% url 'top40' %}">Top 40</a>
+      <a href="{% url 'profile' %}">Profile</a>
+      <a href="#">PlaceHolder</a>
     </div>
     <br />
     <span
-      style="font-size:30px;cursor:pointer; font-size: 90%; font-family:'Batang'; padding-left:40px; color:white" onclick="openNav()">&#9776;</span
-    >
+      style="font-size:30px;cursor:pointer; font-size: 90%; font-family:'Batang'; padding-left:40px; color:black" onclick="openNav()">&#9776;</span>
     <div id="noob-navigator">
       <div class="row">
         <!-- https://codepen.io/CBeghin/pen/HeuiF-->
         {% if user.is_authenticated %}
           <a href="{% url 'profile' %}" class="user"> <i class="fas fa-user"></i></a>
-          
+
           <li><a href="{% url 'logout' %}">Logout</a></li>
         {% else %}
           <a href="{% url 'login' %}" role="button" class="login-button btn btn-outline-light btn-sm">Login</a>
@@ -66,7 +77,6 @@
           </div>
         </form>
       </div>
-      <hr>
     </div>
    <div class="container">
       {% include 'noobnews/messages.html' %}
@@ -76,10 +86,11 @@
   </body>
   <!-- Bootstrap core JavaScript ================================================== -->
 <!-- Placed at the end of the document so the pages load faster -->
-
-<script src="https://npmcdn.com/tether@1.2.4/dist/js/tether.min.js"></script>
 <script src="{% static "js/noobnews-jquery.js" %}"></script>
 <script src="{% static "js/noobnews-ajax.js" %}"></script>
+    {% block video %}
+<script src="https://npmcdn.com/tether@1.2.4/dist/js/tether.min.js"></script>
+
 <script src="{% static "js/top40.js" %}"></script>
 
 <script src="https://npmcdn.com/bootstrap@4.0.0-alpha.5/dist/js/bootstrap.min.js"></script>
@@ -87,4 +98,5 @@
 <script src="http://v4-alpha.getbootstrap.com/dist/js/bootstrap.min.js"> </script>
 
 <script src= "http://v4-alpha.getbootstrap.com/assets/js/ie10-viewport-bug-workaround.js"> </script>
+{% endblock %}
 </html>
