--- a/templates/noobnews/videogame.html
+++ b/templates/noobnews/videogame.html
@@ -1,29 +1,34 @@
 <!DOCTYPE html>
+{% extends 'noobnews/base.html' %}
+{% load staticfiles %}
 <html lang="en">
 
 <head>
   <meta charset="UTF-8">
-  <title>Contact Me Animation</title>
+{% block title_block %}{{ videoGame.name }}{% endblock %}
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link rel='stylesheet' href='https://fonts.googleapis.com/css?family=Roboto+Condensed'>
-  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/5.0.0/normalize.min.css">
-<link rel='stylesheet' href='https://cdnjs.cloudflare.com/ajax/libs/Swiper/4.3.5/css/swiper.min.css'>
 
+
+
+
+    {% block videoG %}    {% endblock %}
+  <link rel="stylesheet" href="/static/css/videoGameBootstrap.css">
   <link rel="stylesheet" href="/static/css/noobnews.css">
+
 </head>
 
-<body>
+{% block body_block %}
 
 </div>
   <div class="fond"><span class="s2"></span></div>
   <div class="contact">
     <main>
       <div class="card">
-        <div class="thumbnail"><img class="left" src="{{ videoGame.image }}" /></div>
+        <div class="thumbnail"><img style="height: inherit; width:inherit;" class="left" src="{{ videoGame.image }}" /></div>
         <div class="right">
           <h1>{{ videoGame.name }} </h1>
           <div class="author">
-            <h2>Nintendo</h2>
+            <h2>{{ videoGame.publisher }}</h2>
           </div>
           <div class="separator"></div>
           <p>{{ videoGame.description }}
@@ -46,7 +51,7 @@
     </main>
 
 
-    <nav>
+    <nav >
         <div class="blog-slider">
           <div class="blog-slider__wrp swiper-wrapper">
             <div class="blog-slider__item swiper-slide">
@@ -54,14 +59,15 @@
                 <span><iframe width="560" height="315" src="https://www.youtube.com/embed/videoseries?list={{ videoGame.youtubeurl }}" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe></span>
               </div>
               <div class="blog-slider__content">
-                <div class="blog-slider__title">Youtube:   Let's Play</div>
+                <div class="blog-slider__title">Youtube: Let's Play</div>
                 <div class="blog-slider__text">Be cool if we got infomration about the video here</div>
-
               </div>
             </div>
+
             <div class="blog-slider__item swiper-slide">
               <div class="blog-slider__img">
-                <span><iframe width="560" height="315" src="https://player.twitch.tv/?autoplay=false&video={{ videoGame.speedRun }}" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe></span>              </div>
+                <span><iframe width="560" height="315" src="https://player.twitch.tv/?autoplay=false&video={{ videoGame.speedRun }}" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe></span>
+              </div>
               <div class="blog-slider__content">
                 <div class="blog-slider__title">Twitch Speed Run</div>
                 <div class="blog-slider__text">Speed run record held by BLA BLA BLA</div>
@@ -94,7 +100,7 @@
 
             <div class="comment-item">
         <h1>Comment Section</h1>
-        <button type="submit"class="nc-icon-wrapper" style= "margin-left: 12%" onclick = "document.getElementById('AddComment').style.display='block'">Add Comment</button>
+        <button id="button2" name="button2" type="submit"class="button2" style= "margin-left: 12%" onclick = "document.getElementById('AddComment').style.display='block'">Add Comment</button>
 
 
           <div class="separator"></div>
@@ -149,7 +155,7 @@
 
 
                     <div class="clearfix">
-                      <button type="Save" class="button button1" style ='margin-left: 5%'>Finish </button>
+                      <button type="Save" id="button2" name="button2" class="button button1" style ='margin-left: 5%'>Finish </button>
                     </div>
                   </form>
                 </div>
@@ -157,8 +163,10 @@
 
     </nav>
   </div>
+  <link rel='stylesheet' href='https://fonts.googleapis.com/css?family=Roboto+Condensed'>
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/5.0.0/normalize.min.css">
+  <link rel='stylesheet' href='https://cdnjs.cloudflare.com/ajax/libs/Swiper/4.3.5/css/swiper.min.css'>
   <script src='https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js'></script>
   <script src="/static/js/index.js"></script>
-</body>
 
-</html>
+{% endblock %}
