Scrollable desc for videogame

--- a/templates/noobnews/videogame.html
+++ b/templates/noobnews/videogame.html
@@ -31,7 +31,7 @@
             <h2>{{ videoGame.publisher }}</h2>
           </div>
           <div class="separator"></div>
-          <p>{{ videoGame.description }}
+          <p class= "scrolld">{{ videoGame.description }}
             <p>
         </div>
         <h5>{{ videoGame.rating }}/5</h5>
