--- a/static/css/noobnews.css
+++ b/static/css/noobnews.css
@@ -61,6 +61,10 @@ body {
     max-height: 400px;
     overflow-y: auto;
 }
+.scrolld {
+    max-height: 250px;
+    overflow-y: auto;
+}
 
 .content-wrap {
   max-width: 800px;
