- Made the login page smaller - Validation so only registered users could post comments - Condition in the carousel so the first element has the active class

--- a/templates/noobnews/videogame.html
+++ b/templates/noobnews/videogame.html
@@ -100,8 +100,9 @@
 
             <div class="comment-item">
         <h1>Comment Section</h1>
-        <button id="button2" name="button2" type="submit"class="button2" style= "margin-left: 12%" onclick = "document.getElementById('AddComment').style.display='block'">Add Comment</button>
-
+        {% if user.is_authenticated %}
+          <button id="button2" name="button2" type="submit"class="button2" style= "margin-left: 12%" onclick = "document.getElementById('AddComment').style.display='block'">Add Comment</button>
+        {% endif %}
 
           <div class="separator"></div>
       <div class="comment-item">
