--- a/templates/noobnews/home.html
+++ b/templates/noobnews/home.html
@@ -12,11 +12,14 @@ Home
     <div id="myCarousel" class="carousel slide" data-ride="carousel" style="width:100%; height:100%;" >
       <!-- Wrapper for slides -->
       <div class="carousel-inner" style="width:100%; height:100%;">
-        <div class="item active" style="width:100%; height:100%;">
+        <!-- Misahael: I commented this to test the carousel with the images in top40List -->
+        <!-- <div class="item active" style="width:100%; height:100%;">
           <img style="height: inherit; width:inherit;" src="/static/videogameImages/breathOfTheWild.jpg" alt=""">
-        </div>
+        </div> -->
         {% for v in top40List %}
-        <div class="item" style="width:100%; height:100%;">
+        <!-- Misahael: Validation to set the 'active' class in the first item of the list -->
+        <!-- Please, if this is not the functionality we want, feel free to delete it -->
+        <div class="item {% if forloop.first %}active{% endif %}" style="width:100%; height:100%;">
           <img style="height: inherit; width:inherit;" src="{{ v.image }}" alt="{{ v.name }}" >
         </div>
         {% endfor %}
@@ -27,13 +30,16 @@ Home
     <div id="myCarousel" class="carousel slide" data-ride="carousel" style="width:100%; height:100%;" >
       <!-- Wrapper for slides -->
       <div class="carousel-inner" style="width:100%; height:100%;">
-        <div class="item active" style="width:100%; height:100%;">
+        <!-- Misahael: I commented this to test the carousel with the images in newList -->
+        <!-- <div class="item active" style="width:100%; height:100%;">
           <img style="height: inherit; width:inherit;" src="/static/videogameImages/breathOfTheWild.jpg" alt=""">
-        </div>
+        </div> -->
         {% for n in newList %}
-        <div class="item" style="width:100%; height:100%;">
-          <img style="height: inherit; width:inherit;" src="{{ n.image }}" alt="{{ n.name }}" >
-        </div>
+        <!-- Misahael: Validation to set the 'active' class in the first item of the list -->
+        <!-- Please, if this is not the functionality we want, feel free to delete it -->
+          <div class="item {% if forloop.first %}active{% endif %}" style="width:100%; height:100%;">
+            <img style="height: inherit; width:inherit;" src="{{ n.image }}" alt="{{ n.name }}" >
+          </div>
         {% endfor %}
       </div>
     </div>
