--- a/templates/noobnews/register.html
+++ b/templates/noobnews/register.html
@@ -5,20 +5,20 @@
     Register
 {% endblock %}
 {% block body_block %}
-<div class="row justify-content-center">
   <script src="../../static/js/login.js"></script>
   <style type="text/css">
     .input-group-text {
       width: 40px;
     }
   </style>
+<div class="row justify-content-center">
   <form
   id="user_form"
   method="POST"
   action="{% url 'register' %}"
   enctype="multipart/form-data"
 >
-    <div class="card-login w-100 bg-light">
+    <div class="card-login w-100">
       <article class="card-body">
           {% csrf_token %}
         {% crispy user_form %}
