--- a/templates/noobnews/top40.html
+++ b/templates/noobnews/top40.html
@@ -3,6 +3,7 @@
 {% load staticfiles %}
 <link rel='stylesheet' href='https://fonts.googleapis.com/css?family=Roboto+Condensed'>
 <link rel="stylesheet" href="/static/css/noobnews.css">
+{% block videoG %}    {% endblock %}
 {% block body_block %}
 
 <div class="jumbotron text-center mt-2" style="background: transparent;">
@@ -26,6 +27,11 @@
     {% endfor %}
   </div>
 </div>
+<link rel='stylesheet' href='https://fonts.googleapis.com/css?family=Roboto+Condensed'>
+<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/5.0.0/normalize.min.css">
+<link rel='stylesheet' href='https://cdnjs.cloudflare.com/ajax/libs/Swiper/4.3.5/css/swiper.min.css'>
+<script src='https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js'></script>
+<script src="/static/js/index.js"></script>
 {% endblock %}
 
 
