--- a/templates/noobnews/videogame.html
+++ b/templates/noobnews/videogame.html
@@ -99,7 +99,7 @@
             <div class="comment-item">
         <h1>Comment Section</h1>
         {% if user.is_authenticated %}
-          <button id="button2" name="button2" type="submit"class="button2" style= "margin-left: 12%" onclick = "document.getElementById('AddComment').style.display='block'">Add Comment</button>
+          <button id="button2" name="button2" type="submit"class="button2" style= "margin-left: 12%" onclick = "document.getElementById('AddComment').style.display='block'">mment</button>
         {% endif %}
 
           <div class="separator"></div>
