--- a/templates/noobnews/profile.html
+++ b/templates/noobnews/profile.html
@@ -8,7 +8,7 @@
 
 {% endblock %}
 
-
+{% block videoG %}    {% endblock %}
 {% block body_block %}
 
 
@@ -45,6 +45,10 @@
 
     </div>
 </div>
-
+<link rel='stylesheet' href='https://fonts.googleapis.com/css?family=Roboto+Condensed'>
+<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/5.0.0/normalize.min.css">
+<link rel='stylesheet' href='https://cdnjs.cloudflare.com/ajax/libs/Swiper/4.3.5/css/swiper.min.css'>
+<script src='https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js'></script>
+<script src="/static/js/index.js"></script>
 
 {% endblock %}
